--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,8 +3,8 @@
 # Server 服务端相关配置
 #
 ############################################################
-# 配置api端口号
-server.port=8080
+# 配置端口号
+server.port=8090
 #server.servlet.context-path=/api
 #日志文件输出目录
 logback.path=/Users/liwei
@@ -13,9 +13,9 @@ logback.path=/Users/liwei
 ############################################################
 spring.datasource1.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource1.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource1.jdbc-url=jdbc:mysql://localhost:3306/car?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-spring.datasource1.username=root
-spring.datasource1.password=liwei
+spring.datasource1.jdbc-url=jdbc:mysql://47.105.38.137:3306/car?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+spring.datasource1.username=levi
+spring.datasource1.password=Lw@19961020
 
 ### hikari连接池配置
 spring.hikari.minimum-idle=5
@@ -27,6 +27,17 @@ spring.hikari.max-lifetime=1800000
 spring.hikari.connection-timeout=30000
 spring.hikari.connection-test-query=SELECT 1
 
+############################################################
+# redis配置
+############################################################
+#spring.redis.host=10.70.73.30
+#spring.redis.port=6379
+#spring.redis.password=2viwxBhRS87zr8IB
+#spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=0
 
 ############################################################
 #
