--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,7 +34,7 @@ spring.hikari.connection-test-query=SELECT 1
 #spring.redis.port=6379
 #spring.redis.password=2viwxBhRS87zr8IB
 #spring.redis.database=0
-spring.redis.host=localhost
+spring.redis.host=47.105.38.137
 spring.redis.port=6379
 spring.redis.password=
 spring.redis.database=0
