--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,8 @@ spring.freemarker.expose-spring-macro-helpers=false
 #spring.freemarker.prefix=
 #spring.freemarker.request-context-attribute=
 #spring.freemarker.settings.*=
-spring.freemarker.suffix=.html
-spring.freemarker.template-loader-path=classpath:/static/
-
-
+spring.freemarker.suffix=.ftl
+spring.freemarker.template-loader-path=classpath:/jsp/
 
 #激活哪一个环境的配置文件
 spring.profiles.active=dev
