--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.freemarker.expose-spring-macro-helpers=false
 #spring.freemarker.request-context-attribute=
 #spring.freemarker.settings.*=
 spring.freemarker.suffix=.ftl
-spring.freemarker.template-loader-path=classpath:/jsp/
+spring.freemarker.template-loader-path=classpath:/ftl/
 
 #激活哪一个环境的配置文件
 spring.profiles.active=dev
