--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,9 +16,9 @@ spring.datasource1.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource1.jdbc-url=jdbc:mysql://47.105.38.137:3306/car?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 #spring.datasource1.username=levi
 #spring.datasource1.password=Lw@19961020
-spring.datasource1.jdbc-url=jdbc:mysql://localhost:3306/car?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-spring.datasource1.username=root
-spring.datasource1.password=liwei
+spring.datasource1.jdbc-url=jdbc:mysql://47.105.38.137:3306/car?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+spring.datasource1.username=levi
+spring.datasource1.password=Lw@19961020
 ### hikari连接池配置
 spring.hikari.minimum-idle=5
 spring.hikari.maximum-pool-size=15
